fix layout breaking on smaller resolutions

--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ div.page div.panel {
     display: block;
     float: left;
     width: 45%;
-    height: 270px;
+    height: 320px;
     margin: 0 20px 20px 0;
     padding: 0 20px 20px 20px;
     background-color: rgba(64, 7, 5, 0.9);
@@ -150,7 +150,7 @@ div.page div.form-group {
     display: block;
     float: left;
     width: 30%;
-    height: 300px;
+    height: 320px;
     margin: 0 20px 20px 0;
     padding: 15px 20px 20px 20px;
     background-color: rgba(64, 7, 5, 0.9);
